Squashes Bugs (mostly mobile) (#1407)

--- a/frontend/src/pages/DataCatalog/DataCatalogPage.module.scss
+++ b/frontend/src/pages/DataCatalog/DataCatalogPage.module.scss
@@ -45,6 +45,7 @@
 
 p.CitationAPA {
   padding-left: 3rem;
+  padding-right: 1rem;
   margin: 1rem initial;
 }
 p.CitationAPA:first-of-type {
