--- a/frontend/src/reports/Report.module.scss
+++ b/frontend/src/reports/Report.module.scss
@@ -38,7 +38,10 @@
 }
 
 .MissingDataInfo {
-  margin: 5rem;
+  margin: 2rem;
+  @media only screen and (min-width: $sm) {
+    margin: 4rem;
+  }
   max-width: $explore-data-max-width;
   text-align: left;
 }
@@ -48,6 +51,11 @@
   background-color: $infobar-color;
   padding: 2px 10px 2px 10px;
   border-radius: 8px;
+
+  p {
+    text-align: center;
+    padding: 1rem 2rem;
+  }
 }
 
 .FootnoteLargeHeading {
